--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <html>
-  <head>
-    <title>Bharath First Page</title>
-  </head>
-  <body>
-    <h1><font size=24 color=red>Etukuri Bharath(Wipro Digital)</h1>
-    
-    <p>Web Developer</p>	
-  </body>
-</html>
+	<head>
+		<title>Bharath</title>
+		<link rel="stylesheet" type="text/css" href="CSS\exercise1.css">
+	</head>
+	<body>
+		<p>
+		<h1>My First Website</h1><br>
+		Welcome to my website! Here are somethings I enjoy.
+		<ul>
+			<li>Web Development</li>
+			<li>Chess</li>
+			<li>Reading</li>
+			<li>Learning</li>
+		</ul>
+		</p>
+		
+		<h2>Favourite Quotes</h2>
+		<blockquote>Here is a favourite quote of mine...</blockquote>
+		<blockquote>...and another</blockquote>
+	</body>
+	</html>
